# nano-robotic

./: README.md  model.yaml  pyproject.toml
config/: robotics_data.yaml  transformer_11m.yaml  vla.yaml
nano_robotic/: batch_handlers.py  model_params.py  train.py
nano_robotic/data/: data_utils.py  dataloader.py  decode_and_augment.py  download_data.py  lerobot.py  normalization.py  pipeline.py  random_ratio_crop.py  robotics_processor.py  robotics_utils.py  simple_vlm_processor.py  webdataset_cache.py
nano_robotic/modules/: feedforward.py  noise_scheduler.py  sin_pos_emb.py  transformer.py  vla.py  vlm_backbone_interface.py
nano_robotic/modules/vlm_backbone/: vlm_backbone_base.py  vlm_backbone_smolvlm.py
nano_robotic/utils/: file_utils.py  hf_hub.py  loss_function.py  lr_scheduler.py  model_utils.py  noise_scheduler.py  optimizer.py  positional_embedding.py  utils.py
